-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
Query Optimization 2021-04-05
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/db/pipeline/document_source_set_window_fields.h:140: UNINIT_CTOR 117876 Class member declaration for "_maxMemory".
/src/mongo/db/pipeline/document_source_set_window_fields.h:98: UNINIT_CTOR 117876 Non-static class member "_maxMemory" is not initialized in this constructor nor in any functions that it calls.