SERVER-55339 Coverity analysis defect 117876: Uninitialized scalar field